--- a/a_spotify_web_client/src/UserPlaylists.css
+++ b/a_spotify_web_client/src/UserPlaylists.css
@@ -6,14 +6,13 @@
 
 .Playlist-container {
   overflow: auto;
-  margin: 1%;
-  border-radius: 10px;
+  background-color: black;
   transition: background-color 0.5s;
   cursor: pointer;
 }
 
 .Playlist-container:hover {
-  background-color: black;
+  background-color: #3d3a37;
 }
 
 .Playlist-image-container {
@@ -25,11 +24,11 @@
 
 .Playlist-image {
   width: 100%;
-  border-radius: 10px;
   margin: 1px;
+  float: left;
 }
 
-.Playlist-content {
+.Playlist-description {
   margin-left: 1%;
   float: left;
   width: 70%;
@@ -38,6 +37,7 @@
 .Track-container {
   text-align: left;
   width: 100%;
+
 }
 
 .Tracks-container {
@@ -45,19 +45,32 @@
   overflow: hidden;
 }
 
-.Track-image {
+.track-image {
   float:left;
-  width: 23%;
+  width: 10%;
 }
 
-.Track-content {
-  float:left;
-  width: 73%;
+.track-content {
+  float: left;
+  width: 80%;
+  margin: 2px;
+  padding: 2px;
 }
 
-.Track-container {
+.track-container {
   overflow: hidden;
+  transition: background-color 0.5s;
   width: 100%;
+  margin: 5px;
+  border-bottom: solid 1px #3d3a37;
+}
+
+.track-container:hover {
+  background-color: #3d3a37;
+}
+
+.track-title {
+  margin: 0px;
 }
 
 img {
